Use Files.writeString API to write string in file